add processor plugin

--- a/craftr-build/package.yml
+++ b/craftr-build/package.yml
@@ -9,6 +9,7 @@ entrypoints:
   craftr.plugins:
   - cxx = craftr.build.plugins.cxx
   - run = craftr.build.plugins.run
+  - processor = craftr.build.plugins.processor
   console_scripts:
   - craftr = craftr.build.main:main
 typed: true
