split up craftr-dsl test cases into separate files

--- a/craftr-dsl/package.yml
+++ b/craftr-dsl/package.yml
@@ -11,6 +11,7 @@ requirements:
 - nr.pylang.ast ~0.0.5
 - dataclasses ^0.6
 - nr.functional ^0.1.0
+- termcolor ^1.1.0
 entrypoints:
   craftr.dsl.macros:
   - yaml = craftr.dsl.macros.yaml:YamlMacro
