enable package test drivers, satisfy mypy

--- a/craftr-dsl/package.yml
+++ b/craftr-dsl/package.yml
@@ -15,3 +15,8 @@ requirements:
 entrypoints:
   craftr.dsl.macros:
   - yaml = craftr.dsl.macros.yaml:YamlMacro
+test-drivers:
+- type: mypy
+- type: pytest
+test-requirements:
+- types-termcolor
