--- a/craftr-core/package.yml
+++ b/craftr-core/package.yml
@@ -1,9 +1,10 @@
 name: craftr-core
-version: 5.0.0
+version: 0.1.0
 author: Niklas Rosenstein <rosensteinniklas@gmail.com>
 modulename: craftr.core
 description: The pure Python API for describing and executing builds with Craftr.
-requirements:
-- python ^3.9
-- nr.caching ^0.3.2
 typed: true
+requirements:
+- nr.caching ^0.3.2
+- python ^3.8
+- typing-extensions ^3.10.0.0
