--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,10 +5,10 @@ name: Python package
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ 5.x ]
     tags: [ '*' ]
   pull_request:
-    branches: [ develop ]
+    branches: [ 5.x ]
 
 jobs:
 
