--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,3 +52,22 @@ jobs:
     - name: Build and run examples/c
       run: cd examples/haskell && craftr run
 
+  build-ocaml-example:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.8', '3.9', '3.x']
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Setup Ocaml
+      uses: ocaml/setup-ocaml@v2
+    - name: Install Craftr
+      run: python -m pip install -e craftr-core -e craftr-build
+    - name: Build and run examples/c
+      run: cd examples/ocaml && craftr run
+
