--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,12 +67,7 @@ jobs:
     - name: Setup Ocaml
       uses: ocaml/setup-ocaml@v2
     - name: Install Ocaml with Opam
-      run: |
-        opam init
-        echo ====
-        opam env
-        echo ====
-        cat ~/.bash_profile
+      run: sudo apt-get install ocaml
     - name: Install Craftr
       run: python -m pip install -e craftr-core -e craftr-build
     - name: Build and run examples/c
