--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,23 @@ on:
 
 jobs:
 
+  run-craftr-core-example:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.8', '3.9', '3.x']
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install Craftr
+      run: python -m pip install -e craftr-core
+    - name: Run example
+      run: python craftr-core/examples/hello_world.py
+
   build-c-example:
     runs-on: ubuntu-latest
     strategy:
@@ -38,7 +55,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.x']
+        python-version: [ '3.8', '3.9', '3.x' ]
 
     steps:
     - uses: actions/checkout@v2
@@ -70,4 +87,3 @@ jobs:
       run: python -m pip install -e craftr-core -e craftr-build
     - name: Build and run examples/c
       run: cd examples/ocaml && craftr run
-
