--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,22 +12,51 @@ on:
 
 jobs:
 
-  run-craftr-core-example:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.x']
-
+        python-version: [ '3.8', '3.9', '3.x' ]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install Craftr
-      run: python -m pip install -e craftr-core
-    - name: Run example
-      run: python craftr-core/examples/hello_world.py
+    - name: Install dependencies
+      run: python -m pip install shut==0.18.0 -q
+    - name: Test
+      run: shut pkg test --isolate
+    - name: Verify package
+      run: shut pkg checks
+
+  documentation:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
+    - name: Install dependencies
+      run: python -m pip install shut==0.18.1 pydoc-markdown==4.2.0 mkdocs -q
+    # - name: Generate changelog
+    #   run: shut changelog -a --markdown >changelog.md
+    - name: Generate docs
+      run: pydoc-markdown --build --site-dir "$PWD/_html"
+    - name: Store Html
+      uses: actions/upload-artifact@v2
+      with:
+        name: docs
+        path: _html
+    - name: Publish docs
+      uses: JamesIves/github-pages-deploy-action@4.1.4
+      if: github.ref == 'refs/heads/develop'
+      with:
+        branch: gh-pages
+        folder: _html
+        ssh-key: ${{ secrets.DEPLOY_KEY }}
 
   build-c-example:
     runs-on: ubuntu-latest
@@ -47,7 +76,7 @@ jobs:
         version: latest
         platform: x64
     - name: Install Craftr
-      run: python -m pip install -e craftr-core -e craftr-build
+      run: python -m pip install -e .
     - name: Build and run examples/c
       run: cd examples/c && craftr :run
 
@@ -64,7 +93,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install Craftr
-      run: python -m pip install -e craftr-core -e craftr-build
+      run: python -m pip install -e .
     # Github Actions always have GHC available.
     - name: Build and run examples/c
       run: cd examples/haskell && craftr run
@@ -84,6 +113,6 @@ jobs:
     - name: Setup Ocaml
       run: sudo apt-get install ocaml
     - name: Install Craftr
-      run: python -m pip install -e craftr-core -e craftr-build
+      run: python -m pip install -e .
     - name: Build and run examples/c
       run: cd examples/ocaml && craftr run
