--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,10 +5,10 @@ name: Python package
 
 on:
   push:
-    branches: [ 5.x ]
+    branches: [ develop ]
     tags: [ '*' ]
   pull_request:
-    branches: [ 5.x ]
+    branches: [ develop ]
 
 jobs:
 
@@ -63,7 +63,6 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.8', '3.9', '3.x']
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -85,7 +84,6 @@ jobs:
     strategy:
       matrix:
         python-version: [ '3.8', '3.9', '3.x' ]
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -103,7 +101,6 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.8', '3.9', '3.x']
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
