--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
 
   documentation:
     runs-on: ubuntu-latest
-    needs: test
+    #needs: test
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
