--- a/pydoc-markdown.yml
+++ b/pydoc-markdown.yml
@@ -9,7 +9,7 @@ renderer:
   pages:
     - title: Home
       name: index
-      source: README.md
+      source: readme.md
     - title: API Documentation
       children:
         - title: craftr.build.loader
