use craftr-dsl 0.5.0 Closure class to execute Craftr code

--- a/package.yml
+++ b/package.yml
@@ -6,7 +6,7 @@ description: CLI and DSL frontend for the Craftr build system.
 typed: true
 requirements:
 - craftr-core ~0.2.0
-- craftr-dsl ~0.2.0
+- craftr-dsl ^0.5.0
 - python ^3.8
 - nr.preconditions ^0.0.4
 entrypoints:
